create e Search by id funcionando

--- a/projeto-to-do-list/src/components/Search/search.css
+++ b/projeto-to-do-list/src/components/Search/search.css
@@ -17,9 +17,24 @@
     width: 8rem;
 }
 
+#button-search{
+    background-color: transparent;
+   border: none;
+}
+
+#button-search:hover{
+  background-color: white;
+  border-radius: 45%;
+  cursor: pointer;
+}
+
 .bi-search{
     font-size:medium;
-    color: gray;
+    color: white;
+}
+
+.bi-search:hover{
+   color: gray;
 }
 
 #display{
