--- a/projeto-to-do-list/src/components/ModalCreate/Mcreate.css
+++ b/projeto-to-do-list/src/components/ModalCreate/Mcreate.css
@@ -1,5 +1,5 @@
-.Modal--create--overlay{
-    width: 90%;
+.Modal--create--overlay {
+  width: 90%;
   height: 100vh;
   position: absolute;
   display: none;
@@ -10,29 +10,35 @@
   margin: 1rem;
 }
 
-.Modal--create{
-    width: 15rem;
-    background-color: white;
-    border: 2px solid green;
-    color: green;
+.Modal--create {
+  width: 15rem;
+  background-color: rgb(255, 251, 199);
+  border: 2px solid #43bf00;
+  font-weight: 600;
+  font-size: medium;
+  color: #43bf00;
 }
 
-.end{
+.end {
   display: flex;
   justify-content: flex-end;
-  padding:.4rem .4rem 0 0;
+  padding: 0.4rem 0.4rem 0 0;
 }
 
-.Modal--create > p{
+.Modal--create > p {
   margin: 0.5rem 1rem 1rem 1rem;
- 
 }
 
-[data-anime]{
+[data-anime] {
   opacity: 0;
-  transition: .6s;
+  transition: 0.6s;
 }
 
-[data-anime="rigth"]{
+[data-anime="left"] {
+  transform: translate3d(-50px, 0px, 0px);
+}
+
+[data-anime].animate {
   opacity: 1;
+  transform: translate3d(0px, 0px, 0px);
 }
