--- a/projeto-to-do-list/src/components/header/header.css
+++ b/projeto-to-do-list/src/components/header/header.css
@@ -13,7 +13,7 @@ h1{
     text-align: center;
 }
 
-header > div{
+header > form{
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -24,13 +24,13 @@ header > div{
 }
 
 @media (min-width: 500px){
-    header > div{
+    header > form{
         width: 50%;
     }
 }
 
 @media (max-width: 500px){
-    header > div{
+    header > form{
         width: 90%;
     }
 }
