--- a/projeto-to-do-list/src/components/Item/Item.css
+++ b/projeto-to-do-list/src/components/Item/Item.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 95%;
-    background-color: white;
+    background-color: #70064E;
     margin: 0.2rem;
     border-radius: 0.3rem;
 }
@@ -11,15 +11,25 @@
 .check--item,
 .icons-edit-delete {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.check--item > input {
-  width: 2.5rem;
-  color: aquamarine;
+.check--item{
+  min-width: 80%;
 }
 
-.task--list--item > input:focus {
-  background-color: blue;
+.check--item > input{
+  width: 18px;
+  height: 18px;
+  margin-right: .4rem;
+}
+
+.Task-name{
+    margin: 0;
+    font-size: small;
+    font-weight: 700;
+    color: white
 }
 
 .bi{
@@ -27,10 +37,15 @@
   padding: .1rem;
 }
 
+.bi-pencil-square,
+.bi-trash{
+  color: gray;
+}
+
 .bi-pencil-square:hover {
-  color: aquamarine;
+  color: rgb(0, 216, 58);
 }
 
 .bi-trash:hover {
-  color: rgb(173, 14, 14);
+  color: rgb(212, 24, 24);
 }
