--- a/projeto-to-do-list/src/components/TaskList/TaskList.css
+++ b/projeto-to-do-list/src/components/TaskList/TaskList.css
@@ -1,12 +1,12 @@
 .task--list {
   position: relative;
-  background-color: #fcb4f64d;
+  background-color: rgb(40, 40, 40);
   min-height: calc(100vh - 10vh);
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  padding: 5px;
+  padding: 16px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
 }
@@ -14,27 +14,4 @@
 .check--item,
 .icons-edit-delete {
   display: flex;
-}
-
-.check--item > input {
-  width: 2.5rem;
-  color: aquamarine;
-}
-
-.task--list--item > input:focus {
-  background-color: blue;
-}
-
-.bi{
-  font-size:larger;
-  padding: .1rem;
-}
-
-.bi-pencil-square:hover {
-  color: aquamarine;
-  filter: brightness(0.90);
-}
-
-.bi-trash:hover {
-  color: rgb(173, 14, 14);
 }
