--- a/projeto-to-do-list/src/components/header/header.css
+++ b/projeto-to-do-list/src/components/header/header.css
@@ -1,70 +1,109 @@
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-h1{
-    color: white;
-    padding-bottom: 0.7rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.808);
-    width: 80%;
-    margin: 1rem 10%;
-    text-align: center;
+h1 {
+  color: white;
+  padding-bottom: 0.7rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.808);
+  width: 80%;
+  margin: 1rem 10%;
+  text-align: center;
 }
 
-header > form{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: .7rem;
-    border: 1px solid rgba(128, 128, 128, 0.808);
-    border-radius: 2rem;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+header > form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.7rem;
+  border: 1px solid rgba(128, 128, 128, 0.808);
+  border-radius: 2rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
 
-@media (min-width: 500px){
-    header > form{
-        width: 50%;
-    }
+@media (min-width: 500px) {
+  header > form {
+    width: 50%;
+  }
 }
 
-@media (max-width: 500px){
-    header > form{
-        width: 90%;
-    }
+@media (max-width: 500px) {
+  header > form {
+    width: 90%;
+  }
 }
 
 button.bi {
-    padding: 0;
-    background-color: transparent;
-    margin: .2rem;
-    border-radius: 50%;
-    border: none;
-    transition: ease-in-out .5s;
+  padding: 0;
+  background-color: transparent;
+  color:rgba(128, 128, 128, 0.808);
+  margin: 0.2rem;
+  border-radius: 50%;
+  border: none;
+  transition: ease-in-out 0.5s;
 }
 
-button:hover{
-   color: wheat;
+button:hover {
+  color: wheat;
+  cursor: pointer;
 }
 
-.bi-plus-lg{
-    padding: .3rem;
-    font-size: larger;
+.bi-plus-lg {
+  padding: 0.3rem;
+  font-size: larger;
 }
 
 input{
-    width: 100%;
-    background-color: transparent;
-    border: none;
-    outline: 0;
-    color: rgb(66, 66, 66);
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: 0;
+  color: white;
 }
 
-input:focus{
-    color: wheat;
+.error {
+  color: red;
 }
 
-.error{
-    color: red;
+.Modal--create--overlay {
+  width: 90%;
+  height: 100vh;
+  position: absolute;
+  display: none;
+  justify-content: flex-end;
+  align-items: flex-start;
+  overflow-y: auto;
+  z-index: 9999;
+  margin: 1rem;
+}
+
+.Modal--create {
+  width: 14.5rem;
+  background-color: #43bf00;
+  font-weight: 600;
+  font-size: medium;
+  color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  animation: modalCreate 2s;
+}
+
+.end {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.4rem 0.4rem 0 0;
+}
+
+.Modal--create > p {
+  margin: 0.5rem 1rem 1rem 1rem;
+}
+
+@keyframes modalCreate {
+  0% {
+    transform: translate3d(50px, 0px, 0px);
+  }
+  100% {
+    transform: translate3d(-50px, 0px, 0px);
+  }
 }
