--- a/projeto-to-do-list/src/components/Footer/Footer.css
+++ b/projeto-to-do-list/src/components/Footer/Footer.css
@@ -1,10 +1,13 @@
 footer{
     width: 100%;
+    text-align: center;
     height: 5rem;
 }
 
-p{
+.footer--p{
+    width: 100%;
     color: white;
+    margin: 2rem;
 }
 
 a{
