--- a/projeto-to-do-list/src/components/Modal/modal.css
+++ b/projeto-to-do-list/src/components/Modal/modal.css
@@ -1,10 +1,10 @@
 .Modal {
-  padding: 30px 80px 20px 20px;
-  min-width: 300px;
+  padding: 30px 10px 20px 10px;
+  min-width: 250px;
   min-height: 200px;
   max-width: 700px;
   max-height: 450px;
-  background: #50c5ee;
+  background: linear-gradient(#88306C, #70064E);
   position: relative;
   border-radius: 10px;
   box-sizing: border-box;
@@ -12,20 +12,19 @@
 }
 
 .Modal__close {
-  font-size: 2em;
+  font-size: 1em;
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   cursor: pointer;
   padding: 5px;
   border-radius: 50%;
   color: white;
-  transform: rotate(45deg);
   transition: all 1s;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -40,7 +39,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
