--- a/projeto-to-do-list/src/components/Overlay/Overlay.css
+++ b/projeto-to-do-list/src/components/Overlay/Overlay.css
@@ -1,9 +1,10 @@
 .Overlay {
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.5);
   position: fixed;
-  display: none;
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   top: 0;
