--- a/projeto-to-do-list/src/views/App/App.css
+++ b/projeto-to-do-list/src/views/App/App.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  background: linear-gradient(#70064E, #116d70);
+  background: linear-gradient(#70064E, #3D032B);
   width: 100%;
   min-height: 100vh;
   overflow: auto;
