--- a/projeto-to-do-list/src/components/Item/Item.css
+++ b/projeto-to-do-list/src/components/Item/Item.css
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 95%;
+  padding: .3rem;
   background-color: #70064e;
   margin: 0.2rem;
   border-radius: 0.3rem;
