--- a/projeto-to-do-list/src/components/TaskList/TaskList.css
+++ b/projeto-to-do-list/src/components/TaskList/TaskList.css
@@ -7,6 +7,7 @@
   align-items: center;
   font-size: calc(10px + 2vmin);
   padding: 16px;
+  padding-bottom: 2rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
 }
