--- a/projeto-to-do-list/src/components/ModalEdit/ModalEdit.css
+++ b/projeto-to-do-list/src/components/ModalEdit/ModalEdit.css
@@ -1,8 +1,35 @@
+.title-edit{
+    color: white;
+    font-size:large;
+}
+
 .form__edit{
     width: 90%;
     height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:flex-end;
     align-items: center;
+    color: gray;
+}
+
+.input-edit{
+    padding: .4rem;
+    border-radius: .5rem;
+    border: solid 1px gray;
+    margin-bottom: 1.5rem;
+    color: gray;
+}
+
+.button-edit{
+    background-color: rgba(67, 67, 67);
+    padding: .4rem;
+    border-radius: .3rem;
+    border: none;
+    color: gray;
+}
+
+.button-edit:hover{
+    background-color: rgb(40, 40, 40) ;
+    color: gray;
 }
